[package]
name = "bookstore-rocketrs"
version = "0.1.0"
edition = "2021"

[dependencies.rocket]
version = "=0.5.0-rc.3"
features = ["json"]

[dependencies.rocket_db_pools]
version = "=0.1.0-rc.3"
features = ["sqlx_postgres"]

[default.databases.postgres_logs]
url = "/db/logs/postgres.psql"

[dependencies.serde]
version = "1.0.136"
features = ["derive"]