[package]
name = "bookstore-rocketrs"
version = "0.1.0"
edition = "2021"

[dependencies.uuid]
version = "1.4.1"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

[dependencies.rocket]
version = "=0.5.0-rc.3"
features = ["json"]

[dependencies.rocket_db_pools]
version = "=0.1.0-rc.3"
features = ["sqlx_postgres"]

[default.databases.postgres_logs]
url = "/db/logs/postgres.psql"

[dependencies.serde]
version = "1.0.136"
features = ["derive"]