[package]
name = "bookstore-api"
version = "0.1.0"
edition = "2021"
publish = false


[dependencies]
bookstore-core = { path = "../core" }
entity = { path = "../entity" }
bookstore-migration = { path = "../migration" }

actix-web = "4.3.1"
actix-http = "3.3.1"
actix-files = "0.6"
actix-rt = "2.4.0"
actix-service = "2.0.2"
dotenvy = "0.15"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.3.1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
serde_derive = "1.0"

tracing-subscriber = { version = "0.3", features = ["env-filter"] }

