[package]
name = "entity"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "entity"
path = "src/lib.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }

[dependencies.sea-orm]
version = "0.11.2"
features = ["with-uuid", "with-json", "with-chrono", "with-time", "macros"]